change tags html to friendly seo

--- a/cyclope/apps/articles/templates/articles/article_teaser.html
+++ b/cyclope/apps/articles/templates/articles/article_teaser.html
@@ -4,10 +4,10 @@
 
     <div class="pretitle-container first meta-content">
       {% if  article.pretitle and not simplified_view %}
-      <span class="pretitle">{% trans article.pretitle %}{% if article.date %}<span class="pretitle-separator"> | </span>{% endif %}</span>
+      <h6 class="pretitle">{% trans article.pretitle %}{% if article.date %}<span class="pretitle-separator"> | </span>{% endif %}</h6>
       {% endif%}
       {% if article.date %}
-      <span class="date">{{ article.date|date:'SHORT_DATE_FORMAT' }}</span>
+      <h6 class="date">{{ article.date|date:'SHORT_DATE_FORMAT' }}</h6>
       {% endif %}
     </div>
 
@@ -19,18 +19,18 @@
       </a></div>
     {% endif %}
 
-    <div class="summary html-content">
+    <h3 class="summary html-content">
       {% if article.summary %}
         {{ article|parsed_gettext:"summary"|smart_style }}
       {% else %}
         {{ article|parsed_gettext:"text"|smart_style|truncatewords_html:40 }}
       {% endif %}
-      <span class="more"><a href="{% url article-detail article.slug %}"> {% trans "More" %}</a></span>
-    </div>
+      <span class="more"><a href="{% url article-detail article.slug %}"> {% trans "More" %}</a></span> 
+    </h3>
 
     {% if not simplified_view %}
         {% if article.author %}
-        <div class="meta-content" ><span class="author">{% trans "By" %} {{ article.author }}</span></div>
+        <div class="meta-content" ><h4 class="author">{% trans "By" %} {{ article.author }}</h4></div>
         {% endif %}
     {% endif %}
 
@@ -42,7 +42,7 @@
 
 {% comment %} TAGS ARE NOT IMPLEMENTED
         {% if article.tags %}
-        <div class="meta-content"><span class="tags">
+        <div class="meta-content"><h2 class="tags">
           <span class="tags-label">{% trans "Tags" %}:</span>
           {% tags_for_object article as article_tags %}
           {% for tag in article_tags %}
@@ -50,7 +50,7 @@
             {{tag.name}}{% if not forloop.last%},{% endif%}
 
           {% endfor %}
-        </span></div>
+        </h2></div>
         {% endif %}
 {% endcomment %}
     <div class="clear"></div>
