--- a/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_detail.html
@@ -19,18 +19,19 @@
   </div>
   {% endif %}
 
-  <div class="action-content download_link">
+  <div class="action-content download_link"><span class="download_link">
     <a href="{{ media.content_url }}" {% if media.new_window %}target="_blank"{% endif%}>
     {% trans "Open external content"%} {% if media.new_window %}{% trans " (in new window)"%}{% endif%}
-    </a>
+    </a></span>
   </div>
-  <div class="html-content">{{ media.description|smart_style }}</div>
+  
+  
+  <h3 class="html-content summary">{{ media.description|smart_style }}</h3>
+
 
   {% include 'medialibrary/media_detail_footer.html' %}
 
   {% include 'cyclope/related_contents_block.html' %}
-
-  <hr>
 
   <!--COMENTARIOS -->
   {% include 'comments/comments_block.html' %}
