--- a/cyclope/apps/medialibrary/templates/medialibrary/document_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/document_detail.html
@@ -16,18 +16,17 @@
   </div>
   {% endif %}
 
-    <div class="action-content download_link">
+    <div class="action-content"><span class="download_link">
       <a href="{{ media.document }}">{% trans "download file" %}
-      </a>
+      </a></span>
     </div>
 
-  <div class="html-content description">{{ media.description|smart_style }}</div>
+  <h3 class="html-content summary">{{ media.description|smart_style }}</h3>
 
   {% include 'medialibrary/media_detail_footer.html' %}
 
   {% include 'cyclope/related_contents_block.html' %}
 
-  <hr>
 
   <!--COMENTARIOS -->
   {% include 'comments/comments_block.html' %}
