--- a/cyclope/apps/medialibrary/templates/medialibrary/media_detail_header.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/media_detail_header.html
@@ -1,7 +1,5 @@
 {% load i18n comments %}
 
-  <div class="meta-content">{% include 'collections/categories_navigation_block.html' %}</div>
-
   <h1 class="title">{{ current_object.name }}</h1>
 
   <!-- herramientas -->
@@ -10,7 +8,9 @@
   <!-- author -->
   {% if current_object.author %}
   <div class="meta-content">
-    <span id="author" class="author">{% trans "By"%} {{ current_object.author }}</span>
+    <h4 id="author" class="author">{% trans "By"%} {{ current_object.author }}</h4>
   </div>
   {% endif %}
   <!-- /autor -->
+  
+
