--- a/cyclope/apps/medialibrary/templates/medialibrary/movieclip_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/movieclip_detail.html
@@ -14,13 +14,11 @@
   {% assign player_height '320' %}
   {% include 'medialibrary/media_player.html' %}
 
-  <div class="html-content">{{ media.description|smart_style }}</div>
+  <h3 class="html-content summary">{{ media.description|smart_style }}</h3>
 
   {% include 'medialibrary/media_detail_footer.html' %}
 
   {% include 'cyclope/related_contents_block.html' %}
-
-  <hr>
 
   <!--COMENTARIOS -->
   {% include 'comments/comments_block.html' %}
