fix css/html textile

--- a/cyclope/apps/articles/templates/articles/article_detail.html
+++ b/cyclope/apps/articles/templates/articles/article_detail.html
@@ -72,7 +72,7 @@ TODO(nicoechaniz): finish adaptation from smarty to django. add trans to text th
 -->
           <!-- /descargas -->
 
-  <div><span class="html-text html-content">
+  <div><span class="html-text html-content text">
     {{ article|parsed_gettext:"text"|smart_style}}
   </span></div>
 
