--- a/cyclope/core/collections/templates/collections/collection_info.html
+++ b/cyclope/core/collections/templates/collections/collection_info.html
@@ -3,16 +3,16 @@
 <div class="collection {{ collection.slug }}">
     <div class="collection_header">
       {% if collection.visible %}
-        <big class="title">{{ collection.name }}</big>
+        <h1 class="title">{{ collection.name }}</h1>
 
         {% if collection.image %}
         <img class="image" src="{% version collection.image.path 'medium' %}" border="0"/>
         {% endif %}
 
         {% if collection.description %}
-        <div class="text">
+        <h3 class="summary">
           {{ collection.description|smart_style }}
-        </div>
+        </h3>
         {% endif %}
       {% endif %}
       <br class="clear"/>
