--- a/cyclope/core/collections/templates/collections/hierarchycal_navigation_block.html
+++ b/cyclope/core/collections/templates/collections/hierarchycal_navigation_block.html
@@ -19,9 +19,9 @@
   {% endif%}
 
 <div class="category_title">
-  <h6 class="hiper-titles">
+  <h1 class="title">
     <a href="{% url category-default category.slug %}">{{ category.name }}</a>
-  </h6>
+  </h1>
 </div>
 
 {% endif %}
