--- a/cyclope/media/themes/neutrona/css/neutrona.css
+++ b/cyclope/media/themes/neutrona/css/neutrona.css
@@ -220,9 +220,9 @@ VISTA ARTICULO + TEXTILE
 .article-detail h6, .staticpage-detail h6 {color:#666;}
 .article-detail pre, .staticpage-detail pre {overflow-x:auto;overflow-y:auto;border-radius:4px;-webkit-border-radius:4px;-moz-border-radius:4px;margin:10px 0;padding:20px;border:1px solid #ccc;background:#eee;font-size:0.9em;font-weight:400;color:#000;}
 .article-detail code, .staticpage-detail code {padding:0;color:#999;font-weight:400;}
-.article-detail p.text, .article-detail .text p /*se debe cambiar la salida en cyclope, este no iria*/, .staticpage-detail p.text {font-size:1.1em;color:#333;line-height:1.5em;text-align:justify;padding:20px 0 0;}
+.article-detail div.text p, .staticpage-detail div.text p {font-size:1.1em;color:#333;line-height:1.5em;text-align:justify;padding:20px 0 0;}
 .article-detail span, .staticpage-detail span {margin:0;padding:0;}
-.article-detail span.break, .staticpage-detail span.break {margin:-20px 0 0;padding:20px;display:block;text-align:left;width:60%;color:#fff;background:#999;border-left:5px solid #000;font-size:0.9em;}
+.article-detail span.tip, .staticpage-detail span.tip {margin:-20px 0 0;padding:20px;display:block;text-align:left;width:60%;color:#fff;background:#999;border-left:5px solid #000;font-size:0.9em;}
 .article-detail blockquote, .staticpage-detail blockquote {background:#eee;padding:0 20px 20px;margin:10px 0;font-size:0.9em;width:60%;line-height:1em;border-left:5px solid #ccc;text-align:left;}
 .article-detail sup, .staticpage-detail sup {}
 .article-detail sub, .staticpage-detail sub {}
@@ -240,7 +240,7 @@ VISTA ARTICULO + TEXTILE
 .article-detail img, .staticpage-detail img {}
 .article-detail img, .staticpage-detail img {}
 #container .content-view img {margin:20px 0 20px 20px;padding:0;float:none;box-shadow:2px 2px 20px #666;-webkit-box-shadow:2px 2px 20px #666;-moz-box-shadow: 2px 2px 20px #666;}
-.footnote {color:#666;font-size:.8em;margin:4px 0;}
+.article-detail div.text p.footnote, .staticpage-detail div.text p.footnote {color:#666;font-size:.8em;margin:4px 0;padding:0;}
 .article-detail .date {color:#333;font-size:.9em;margin:5px 0 0;display:block;}
 .article-detail .source {color:#333;font-size:.9em;margin:20px 0 0;display:block;}
 .article-detail .categories ul {list-style:none;margin:10px 0;}
