--- a/cyclope/media/themes/neutrona/css/neutrona.css
+++ b/cyclope/media/themes/neutrona/css/neutrona.css
@@ -27,7 +27,7 @@ h6.hiper-titles {border-left:6px solid #ddd;background-color:#eee;font-weight:70
 form input {padding:5px;width:auto;border-radius:6px;-webkit-border-radius:6px;-moz-border-radius:6px;background:#fff;color:#000;border:1px solid #000;}
 form input.submit {background:#ccc;color:#000;border:1px solid #999;}
 textarea {border-radius:6px;-webkit-border-radius:6px;-moz-border-radius:6px;}
-		
+.set_width_to_cero { width: 0; padding: 0; margin: 0; }		
 
 /*-----------------------------------------------------------------------------------------------
 ESQUELETO GENERAL
@@ -37,7 +37,7 @@ ESQUELETO GENERAL
 .push_1,.pull_1,.push_2,.pull_2,.push_3,.pull_3,.push_4,.pull_4,.push_5,.pull_5,.push_6,.pull_6,.push_7,.pull_7,.push_8,.pull_8,.push_9,.pull_9,.push_10,.pull_10,.push_11,.pull_11,.push_12,.pull_12,.push_13,.pull_13,.push_14,.pull_14,.push_15,.pull_15,.push_16,.pull_16,.push_17,.pull_17,.push_18,.pull_18,.push_19,.pull_19,.push_20,.pull_20,.push_21,.pull_21,.push_22,.pull_22,.push_23,.pull_23{position:relative}
 .alpha{margin-left:0}
 .omega{margin-right:0}
-#mascara {}
+#mascara {  }
 #medianera {overflow:auto;background:#fff;} 
 .two_sidebars #content_container {margin-right: 240px;}
 
@@ -47,13 +47,32 @@ ESQUELETO GENERAL
 .pagination {padding:0 10px 0 5px;margin:0 10px;} 
 
 /*-----------------------------------------------------------------------------------------------
-MENU HORIZONTAL
------------------------------------------------------------------------------------------------*/
+MENU HORIZONTAL (San)
+-----------------------------------------------------------------------------------------------*//*
 #header .menuitems_hierarchy {height:33px;padding:10px 0 0;font-size:0.9em;}
 #header .menuitems_hierarchy ul {float:right; padding:0; list-style:none;}
 #header .menuitems_hierarchy li {float:left;margin:0 0 5px 7px;}
 #header .menuitems_hierarchy li a {float:left; text-decoration:none;color:#fff;font-weight:700;background:#000;margin:0 0 0 0;padding:6px 12px;}
 #header .menuitems_hierarchy li a:hover {background:#666;color:#eee;} 
+*/
+/*-----------------------------------------------------------------------------------------------
+MENU HORIZONTAL (Fede: 15 Jun 2011)
+-----------------------------------------------------------------------------------------------*/
+#header { height: 40px; padding: 10px 0 0; font-size: .9em; }
+#header ul { float: right; list-style: none; }
+#header li  { float: left; margin: 0 0 5px 7px; }
+#header li a { display: block; text-decoration: none; color: #fff; font-weight: 700;
+    background: #000; margin: 0; padding: 6px 12px; }
+#header li a: hover { background: #666; color: #eee; }
+/* Sub Menues */
+#header ul ul { font-size:.8em; min-width: 200px;
+    position: absolute; float: none; }
+#header ul ul li { float: none; margin: 0; }
+#header ul ul li span a { padding: 8px 10px; background: #333; font-weight: 400;
+    float: none; }
+/* SUB-SUB MENUES */
+#header ul ul ul { font-size: 1em; }
+#header ul ul ul li span a { overflow: hidden; background: #444; }
 
 /*-----------------------------------------------------------------------------------------------
 AIRE
