--- a/cyclope/media/themes/neutrona/css/neutrona.css
+++ b/cyclope/media/themes/neutrona/css/neutrona.css
@@ -10,7 +10,7 @@ Si modificas no borres estas lineas :)
 */
 
 /*-----------------------------------------------------------------------------------------------
-PARAMETROS GENERALES X DEFAULT
+PARAMETROS GENERALES
 -----------------------------------------------------------------------------------------------*/
 body{font-family: Arial, Verdana, Helvetica, Sans-serif; margin: 0; font-size:12pt; background-color:#fff;}
 * {margin:0; padding:0;}
@@ -47,6 +47,16 @@ ESQUELETO GENERAL
 .pagination {padding:0 10px 0 5px;margin:0 10px;} 
 
 /*-----------------------------------------------------------------------------------------------
+DEFAULT
+-----------------------------------------------------------------------------------------------*/
+h1.title {padding:10px 0;display:block;border-bottom:1px solid #666;}
+h3.summary {color:#333;font-weight:700;padding:10px 0;text-align:justify;line-height:1.5em;}
+h4.author {color:#666;border-left:4px solid #ccc;padding:0 0 0 10px;margin:10px 0 0;font-size:.9em;}
+h6.pretitle {color:#666;text-transform:uppercase;}
+h6.date {color:#666;text-transform:uppercase;}
+h6.source {color:#666;}
+
+/*-----------------------------------------------------------------------------------------------
 MENU HORIZONTAL (San)
 -----------------------------------------------------------------------------------------------*//*
 #header .menuitems_hierarchy {height:33px;padding:10px 0 0;font-size:0.9em;}
@@ -58,21 +68,22 @@ MENU HORIZONTAL (San)
 /*-----------------------------------------------------------------------------------------------
 MENU HORIZONTAL (Fede: 15 Jun 2011)
 -----------------------------------------------------------------------------------------------*/
-#header { height: 40px; padding: 10px 0 0; font-size: .9em; }
-#header ul { float: right; list-style: none; }
-#header li  { float: left; margin: 0 0 5px 7px; }
-#header li a { display: block; text-decoration: none; color: #fff; font-weight: 700;
-    background: #000; margin: 0; padding: 6px 12px; }
-#header li a: hover { background: #666; color: #eee; }
+#header .menuitems_hierarchy {height: 35px; padding: 5px 0 0;}
+#header .menuitems_hierarchy ul {float:right;list-style: none;}
+#header .menuitems_hierarchy li  {float:left; margin: 0 0 0 7px;}
+#header .menuitems_hierarchy li a {display: block; text-decoration: none; color: #fff; font-weight: 700;background: #000; margin: 0; padding: 6px 12px; }
+#header .menuitems_hierarchy li a:hover {background: #666; color: #eee; }
 /* Sub Menues */
-#header ul ul { font-size:.8em; min-width: 200px;
-    position: absolute; float: none; }
-#header ul ul li { float: none; margin: 0; }
-#header ul ul li span a { padding: 8px 10px; background: #333; font-weight: 400;
-    float: none; }
+#header .menuitems_hierarchy ul ul{font-size:.85em;width:180px;position:absolute;margin:0;padding:0 0 5px;border:none;background:#666;border-bottom-right-radius:5px;-webkit-border-bottom-right-radius:5px;-moz-border-radius-bottomright:5px;  border-top-bottom-radius:5px;-webkit-border-bottom-left-radius:5px;-moz-border-radius-bottomleft:5px;}
+#header .menuitems_hierarchy li li {float:none; margin: 0;}
+#header .menuitems_hierarchy li li a {padding: 8px 10px;background:#666;}
+#header .menuitems_hierarchy li li a:hover {background:#000;}
 /* SUB-SUB MENUES */
-#header ul ul ul { font-size: 1em; }
-#header ul ul ul li span a { overflow: hidden; background: #444; }
+#header .menuitems_hierarchy ul ul ul {background:#333;}
+#header .menuitems_hierarchy li li li {}
+#header .menuitems_hierarchy li li li a {padding: 8px 10px;background:#333;} }
+#header .menuitems_hierarchy li li li a:hover {background: #000; }
+
 
 /*-----------------------------------------------------------------------------------------------
 AIRE
@@ -215,7 +226,20 @@ TITULOS GLOBALES (indice, mapa, contacto, busqueda)
 /*.regionview .article.teaser h4 {font-size:0.75em;margin:0;padding:0 0 7px;color:#666;font-weight:700;}/*
 .regionview .article.teaser .date {font-size:0.7em;padding:4px 0 0;color:#666;font-weight:400;}
 
- 
+/*-----------------------------------------------------------------------------------------------
+VISTAS COLECCIONES	
+-----------------------------------------------------------------------------------------------*/
+.collection {margin:0 0 20px;}
+.collection h3 {}
+.collection p {padding:0;display:block;}
+.collection img.image {float:left;overflow:auto;margin:0 10px 0 0;}
+.teaser {margin:10px 0;overflow:auto;border-bottom:5px solid #eee;}
+.teaser img.icon {float:right;width:150px;clear:both;padding:3px;border:3px solid #ccc;margin:0 0 20px 20px;}
+.collection span.collection_teaser {overflow:auto;background:#eee;display:block;margin:0 0;padding:10px;border-bottom:1px solid #000;}
+.collection h3.summary {color:#333;font-weight:700;padding:0;text-align:justify;line-height:1.5em;}
+.teaser h2.title {padding:10px 0 0;display:block;border-bottom:none;}
+.teaser h2.title a {text-decoration:underline;} 
+.teaser h3.summary {color:#333;font-weight:400;padding:15px 0;text-align:justify;line-height:1.5em;}
 /*-----------------------------------------------------------------------------------------------
 VISTA ARTICULO + TEXTILE
 -----------------------------------------------------------------------------------------------*/
@@ -224,7 +248,7 @@ VISTA ARTICULO + TEXTILE
 .article-detail a, .staticpage-detail a {color:#000;}
 .article-detail {}
 
-.article-detail h1.title, .staticpage-detail h1.title {padding:10px 0;display:block;border-bottom:1px solid #666;}
+.article-detail h1.title {padding:10px 0;display:block;border-bottom:1px solid #666;}
 .article-detail h3.summary {color:#333;font-weight:700;padding:10px 0;text-align:justify;line-height:1.5em;}
 .article-detail h4.author {color:#666;border-left:4px solid #ccc;padding:0 0 0 10px;margin:10px 0 0;font-size:.9em;}
 .article-detail h6.pretitle {color:#666;text-transform:uppercase;}
@@ -307,24 +331,6 @@ VISTA COMENTARIOS
 #user_comments small {margin:0;color:#666;font-weight:400;display:block padding:3px 0;width:350px;clear:both;font-size:0.8em;}
 #user_comments .hidden {border:none;display:none;}
 
-
-#fuego-content .category h2,#fuego-content .collection  big {margin:0 0 10px;font-weight:700;display:block;}
-#fuego-content .category h2 a, #fuego-content .collection big a {color:#333;}
-#fuego-content .category .text, #fuego-content .collection .text {margin:0 0 20px 0;padding:0 0 10px;border-bottom:6px solid #eee;}
-#fuego-content .category .selected, #fuego-content .collection .selected {margin:0 0 20px 0;padding:0 0 10px;border-bottom:6px solid #eee;}
-
-#fuego-content table {} 
-#fuego-content th {background:#666;color:#fff;}
-#fuego-content td {border:1px solid #999;}
-
-#fuego-content .content-view {overflow:auto;}
- 
-#fuego-content .texto {font-size: 0.9em;padding:0;} 
-#fuego-content .texto ul {padding:0;margin:0 0 0 30px;list-style:square;} 
-#fuego-content .texto li {padding:15px 0 0;}
-#fuego-content .categories {}
-
-#fuego-content .article-teaser {margin: 4px 0 20px 0;clear:both;padding:3px 0;}
 
 /*-----------------------------------------------------------------------------------------------
 VISTA LISTA DETALLADA ARTICULOS 
