enhancement tags collection views _teaser.html

--- a/cyclope/apps/articles/templates/articles/article_teaser.html
+++ b/cyclope/apps/articles/templates/articles/article_teaser.html
@@ -19,7 +19,7 @@
       </a></div>
     {% endif %}
 
-    <h3 class="summary html-content">
+    <h3 class="html-content summary">
       {% if article.summary %}
         {{ article|parsed_gettext:"summary"|smart_style }}
       {% else %}
