--- a/cyclope/apps/medialibrary/templates/medialibrary/document_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/document_teaser.html
@@ -9,11 +9,11 @@
     {% endif %}
 
     {% if document.description %}
-      <div class="description html-content">{{ document.description|smart_style }}</div>
+      <h3 class="html-content summary">{{ document.description|smart_style }}</h3>
     {% endif %}
 
     {% if document.author %}
-      <div class="author_container meta-content"><span class="author">{% trans "By" %} {{ document.author }}</span></div>
+      <div class="author_container meta-content"><h4 class="author">{% trans "By" %} {{ document.author }}</h4></div>
     {% endif %}
 
     {% if document.image %}
