--- a/cyclope/apps/medialibrary/templates/medialibrary/movieclip_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/movieclip_teaser.html
@@ -9,11 +9,11 @@
      {% endif %}
 
      {% if movieclip.description %}
-       <div class="html-content description">{{ movieclip.description|smart_style }}</div>
+       <h3 class="html-content summary">{{ movieclip.description|smart_style }}</h3>
      {% endif %}
 
      {% if movieclip.author %}
-       <div class="meta-content author_container"><span class="author">{% trans "By" %} {{ movieclip.author }}</span></div>
+       <div class="meta-content author_container"><h4 class="author">{% trans "By" %} {{ movieclip.author }}</h4></div>
      {% endif %}
 
      {% if movieclip.tags %}
