--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_teaser.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_teaser.html
@@ -10,7 +10,7 @@
 
 
     {% if staticpage.summary %}
-      <p class="description">{{ staticpage.summary|smart_style }}</p>
+      <h3 class="html-content summary">{{ staticpage.summary|smart_style }}</h3>
     {% endif %}
 
     {% if staticpage.tags %}
