--- a/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_teaser.html
@@ -11,14 +11,14 @@
     {% endif %}
 
     {% if externalcontent.description %}
-    <div class="description html-content">
+    <h3 class="html-content summary">
       {{ externalcontent.description|smart_style }}
     {% if not externalcontent.skip_detail %}
       <span class="more"><a href="{% url externalcontent-detail externalcontent.slug %}"></span>
       {% trans "More"%}
       </a>
     {% endif %}
-    </div>
+    </h3>
     {% endif %}
 
     {% if externalcontent.image %}
