--- a/cyclope/core/collections/templates/collections/collection_categories_hierarchy.html
+++ b/cyclope/core/collections/templates/collections/collection_categories_hierarchy.html
@@ -34,9 +34,10 @@
         }
     });
 </script>
-
+<div class="root">
 <ul>
   {{ categories|unordered_list }}
 </ul>
+</div>
 {% endblock content%}
 
